bk_ida/gccida/c3/cselib_mem_conflict_p
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cselib_mem_conflict_p/src/cselib.c:1502:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code code; // [rsp+24h] [rbp-1Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cselib_mem_conflict_p/src/cselib.c:1511:4: error: use of undeclared identifier 'operator'
|| operator+=<char [3], QByteArray>( val, mem_base) ) 
   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cselib_mem_conflict_p/src/cselib.c:1511:14: error: expected expression
|| operator+=<char [3], QByteArray>( val, mem_base) ) 
             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cselib_mem_conflict_p/src/cselib.c:1511:15: error: expected expression
|| operator+=<char [3], QByteArray>( val, mem_base) ) 
              ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cselib_mem_conflict_p/src/obj/cselib.o] Error 1
